@@ -64,9 +64,14 @@ libgnustep-corebase_HEADER_FILES = \
 
 libgnustep-corebase_NEEDS_GUI = NO
 
+
+ifeq ($(GNUSTEP_TARGET_OS), mingw32)
+  ADDITIONAL_LDFLAGS = -L/mingw/bin
+endif
+
 ADDITIONAL_INCLUDE_DIRS = -I../Headers
-ADDITIONAL_CFLAGS = "-DBUILDING_SELF"
-ADDITIONAL_CXXFLAGS = "-DBUILDING_SELF"
-ADDITIONAL_OBJCFLAGS = "-DBUILDING_SELF"
+ADDITIONAL_CFLAGS = -DBUILDING_SELF
+ADDITIONAL_CXXFLAGS = -DBUILDING_SELF
+ADDITIONAL_OBJCFLAGS = -DBUILDING_SELF
 
 include $(GNUSTEP_MAKEFILES)/library.make
